# isucon-shin

./: .gitignore  CLAUDE.md  README.md  TODO.md
db/: comment_count.sql  indexes.sql  split_imgdata.sql
deploy/: isu-rust.service
docs/: worklog.md
etc/mysql/mysql.conf.d/: zz-isucon.cnf
etc/nginx/: nginx.conf
etc/nginx/sites-available/: isucon.conf
webapp/rust/: Cargo.toml
webapp/rust/src/: main.rs
webapp/rust/templates/: banned.html  base.html  index.html  login.html  macros.html  post_id.html  posts.html  register.html  user.html
