[package]
name = "isu-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "isu-rust"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio", "chrono"] }
askama = "0.12"
chrono = { version = "0.4", features = ["clock"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
form_urlencoded = "1"

[profile.release]
opt-level = 3
lto = "thin"
